# todo-api

./: .env.example  Cargo.toml  Dockerfile  calls.http  diesel.toml  docker-compose.yml
migrations/2024-12-20-010835_init_users/: up.sql
migrations/2024-12-21-031215_init_todo/: up.sql
src/: app_state.rs  helpers.rs  main.rs  router.rs  schema.rs
src/app/: mod.rs
src/app/auth/: dto.rs  mod.rs  routes.rs
src/app/auth/actions/: login_action.rs  mod.rs  register_action.rs
src/app/health/: dto.rs  routes.rs
src/app/todo/: dto.rs  routes.rs
src/app/user/: dto.rs  routes.rs
src/env/: mod.rs
src/middlewares/: auth_middleware.rs
src/services/: database.rs
src/services/models/: todo.rs  user.rs
src/shared/: jwt.rs  mod.rs
src/shared/models/: api_error.rs
