[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.216", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }
lazy_static = "1.5.0"
thiserror = "2.0.8"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
r2d2 = "0.8.10"
futures-util = "0.3.31"
